Improve profiler collection and Android coverage (#8)